@@ -25,7 +25,7 @@
 using namespace std;
 
 
-/// Return the spectral reflectance for a particular point in XML format
+/// Return the profile for a line in JSON format
 void PFL::run( Session* session, const std::string& argument ){
 
   /* The argument should be of the form <resolution>:<x1>,<y1>-<x2>,<y2>
@@ -38,7 +38,7 @@ void PFL::run( Session* session, const std::string& argument ){
 
   if( session->loglevel >= 3 ) (*session->logfile) << "PFL handler reached" << endl;
 
-  unsigned int resolution, x1, y1, x2, y2;
+  unsigned int resolution, x1, y1, x2, y2, width, height;
 
 
   // Time this command
@@ -70,40 +70,44 @@ void PFL::run( Session* session, const std::string& argument ){
 			<< ", Position: " << x1 << "," << y1 << " - " 
 			<< x2 << "," << y2 << endl;
   }
-  
+
+
+  // Make sure we don't request impossible resolutions
+  if( resolution<0 || resolution>=(*session->image)->getNumResolutions() ){
+    ostringstream error;
+    error << "PFL :: Invalid resolution number: " << resolution; 
+    throw error.str();
+  }
+
+
+  // Determine whether we have a horizontal or vertical profile or just a single point
+  if( x2 > x1 ){
+    width = x2-x1;
+    height = 1;
+  }
+  else if( y2 > y1 ){
+    width = 1;
+    height = y2-y1;
+  }
+  else{
+    width = 1;
+    height = 1;
+  }
+
 
   // Create our tilemanager object
   TileManager tilemanager( session->tileCache, *session->image, session->watermark, session->jpeg, session->logfile, session->loglevel );
 
-
-#ifndef DEBUG
-  char str[1024];
-  snprintf( str, 1024,
-	    "Server: iipsrv/%s\r\n"
-	    "Content-Type: application/xml\r\n"
-	    "Cache-Control: max-age=%d\r\n"
-	    "Last-Modified: %s\r\n"
-	    "\r\n",
-	    VERSION, MAX_AGE, (*session->image)->getTimestamp().c_str() );
-
-  session->out->printf( (const char*) str );
-  session->out->flush();
-#endif
-
-  session->out->printf( "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" );
-  session->out->printf( "<profile>\n" );
-  session->out->flush();
-
-  unsigned width = x2-x1;
-
   // Get the region of data for this line profile
-  RawTile rawtile = tilemanager.getRegion( resolution, session->view->xangle, session->view->yangle, session->view->getLayers(), x1, y1, width, 1 );
+  RawTile rawtile = tilemanager.getRegion( resolution, session->view->xangle, session->view->yangle, session->view->getLayers(), x1, y1, width, height );
+
 
   // Put the results into a string stream
   std::ostringstream profile;
-  profile.precision(4);
+  profile.precision(6);
 
-  for( unsigned int i=0; i<width; i++ ){
+  // Loop through our pixels
+  for( unsigned int i=0; i<width*height; i++ ){
 
     float intensity;
     void *ptr;
@@ -111,20 +115,20 @@ void PFL::run( Session* session, const std::string& argument ){
     // Handle depending on bit depth
     if( rawtile.bpc == 8 ){
       ptr = (unsigned char*) (rawtile.data);
-      intensity = static_cast<float>((float)((unsigned char*)ptr)[i]);
+      intensity = (float)((unsigned char*)ptr)[i];
     }
     else if( rawtile.bpc == 16 ){
       ptr = (unsigned short*) (rawtile.data);
-      intensity = static_cast<float>((float)((unsigned short*)ptr)[i]);
+      intensity = (float)((unsigned short*)ptr)[i];
     }
     else if( rawtile.bpc == 32 ){
       if( rawtile.sampleType == FIXEDPOINT ) {
         ptr = (unsigned int*) rawtile.data;
-        intensity = static_cast<float>((float)((unsigned int*)ptr)[i]);
+        intensity = (float)((unsigned int*)ptr)[i];
       }
-      else {
+      else{
         ptr = (float*) rawtile.data;
-        intensity = static_cast<float>((float)((float*)ptr)[i]);
+        intensity = (float)((float*)ptr)[i];
       }
     }
 
@@ -134,22 +138,34 @@ void PFL::run( Session* session, const std::string& argument ){
 
   }
 
+
+#ifndef DEBUG
+  char str[1024];
+  snprintf( str, 1024,
+	    "Server: iipsrv/%s\r\n"
+	    "Content-Type: application/json\r\n"
+	    "Cache-Control: max-age=%d\r\n"
+	    "Last-Modified: %s\r\n"
+	    "\r\n",
+	    VERSION, MAX_AGE, (*session->image)->getTimestamp().c_str() );
+
+  session->out->printf( (const char*) str );
+  session->out->flush();
+#endif
+
+  // Send out as JSON
+  session->out->printf( "{\n\t\"profile\": [" );
   session->out->printf( profile.str().c_str() );
+  session->out->printf( "]\n}" );
   session->out->flush();
 
   if( session->loglevel >= 5 ) (*session->logfile) << "PFL :: " << profile.str().c_str() << endl;
-
-
-  session->out->printf( "</profile>" );
-
-  session->out->printf( "\r\n" );
 
   if( session->out->flush() == -1 ) {
     if( session->loglevel >= 1 ){
       *(session->logfile) << "PFL :: Error flushing jpeg tile" << endl;
     }
   }
-
 
   // Inform our response object that we have sent something to the client
   session->response->setImageSent();
