@@ -1,3 +1,7 @@
+02/09/2013:
+	- Modified PFL command to use JSON and implemented vertical profiles.
+
+
 28/08/2013:
 	- Added PFL command for obtaining raw X profiles of data. Syntax
 	  is <resolution>:<x1>,<y1>-<x2>,<y2>. Only horizontal profiles are supported so far.
